--- a/hobbys.html
+++ b/hobbys.html
@@ -37,6 +37,13 @@
         <p>
             Olá, vejo que esta interressado em conhecer um pouco mais sobre min, bem deixe-me lhe introduzir um pouco sobre o que faço nas horas vagas, geralmente o meu hobby mais comum e estar na comunidade de jogos, nos tempos atuais estou atuando como jogador profissional em crescimento aprendendo sobre um jogo conhecido como <span>Honor Of Kings</span>. E o Honor of Kings é um jogo de estrategia de 5 contra 5 com um objetivo de derrubar\destruir torres inimigas com o objetivo de chegar no nucleo da base inimiga e a destruir assim garantindo a vitória do jogo. Vai ser uma tragetoria complexa porem cheia de desafios e conquistas diferentes e com um cenario em constante crescimento e evolução. E é sempre um prazer cresçer.
         </p> 
+        <div id="honorofkings">
+            <img src="images/hok-closed-beta-thumbnail.webp" alt="Capa do Honor Of Kings" class="hok">
+            <div id="honor">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wnmdXbM67I8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" class="video" allowfullscreen></iframe>
+            </div>
+        </div>
+
     </main>
 
     <footer>
