--- a/hobbys.html
+++ b/hobbys.html
@@ -18,13 +18,14 @@
             <a href="mailto:brenobentofontenele@gmail.com"><img src="images/logo-email.png" alt="Meu email" class="social"></a>
             <a href="https://instagram.com/drenordx?igshid=ZDdkNTZiNTM=" target="_blank" rel="noopener noreferrer" ><img src="images/logo-instagram.png" alt="Meu Instagram" class="social"></a>
             <a href="https://api.whatsapp.com/send?phone=5585986609078" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="Meu Whatsapp" class="social"></a>
+            <a href="https://mobile.twitter.com/DrenordHypers" target="_blank" rel="noopener noreferrer"><img src="images/logo-twitter.png" alt="Meu Twitter" class="social"></a>
         </div>
         
         <div id="capa">
             <h1>Breno Bento Fontenele</h1>
             <p>Estudante</p>
         </div>
-        <img src="images/perfil-ele.jpg" alt="Breno Bento Fontenele" id="fotoperfil">
+        <img src="images/brenoperfil.jpg" alt="Breno Bento Fontenele" id="fotoperfil">
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">Início</a> | 
@@ -34,12 +35,13 @@
     </header>
     
     <main>
-        <p>
+        <p class="alinhamento">
             Olá, vejo que esta interressado em conhecer um pouco mais sobre min, bem deixe-me lhe introduzir um pouco sobre o que faço nas horas vagas, geralmente o meu hobby mais comum e estar na comunidade de jogos, nos tempos atuais estou atuando como jogador profissional em crescimento aprendendo sobre um jogo conhecido como <span>Honor Of Kings</span>. E o Honor of Kings é um jogo de estrategia de 5 contra 5 com um objetivo de derrubar\destruir torres inimigas com o objetivo de chegar no nucleo da base inimiga e a destruir assim garantindo a vitória do jogo. Vai ser uma tragetoria complexa porem cheia de desafios e conquistas diferentes e com um cenario em constante crescimento e evolução. E é sempre um prazer cresçer.
         </p> 
         <div id="honorofkings">
-            <img src="images/hok-closed-beta-thumbnail.webp" alt="Capa do Honor Of Kings" class="hok">
-            <div id="honor">
+            <img src="images/honor-of-kings-logo.png" alt="Capa do Honor Of Kings" class="hok">
+
+            <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wnmdXbM67I8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" class="video" allowfullscreen></iframe>
             </div>
         </div>
