--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Breno Bento Fontenele</h1>
             <p>Estudante</p>
         </div>
-        <img src="images/perfil-ele.jpg" alt="Breno Bento Fontenele" id="fotoperfil">
+        <img src="images/brenoperfil.jpg" alt="Breno Bento Fontenele" id="fotoperfil">
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">Início</a> | 
@@ -34,7 +34,7 @@
     </header>
     
     <main>
-        <p>Olá! Meu nome é Breno Bento Fontenele e sou um estudante de informática. Atualmente, estou aprendendo a desenvolver páginas na web utilizando as linguagens HTML e CSS na Way Cursos. Estou muito entusiasmado em aprender mais sobre programação e tecnologia, e espero poder utilizar essas habilidades no futuro para criar projetos incríveis e contribuir para a comunidade de desenvolvimento web. Pretendo constatemente continuar evoluindo e crescendo em quaisquer situações decorrentes, com a minha força de vontade e determinação sinto que consigo ir a lugares inimagináveis, sempre vai ser um prazer conhecer pessoas novas com novos conhecimentos assim sempre poderemos aprender coisas novas e evoluir mais ainda. Sinta-se à vontade para navegar em meu portfólio e conferir alguns dos projetos que já desenvolvi até o momento. Obrigado pela visita!</p>
+        <p class="alinhamento">Olá! Meu nome é Breno Bento Fontenele e sou um estudante de informática. Atualmente, estou aprendendo a desenvolver páginas na web utilizando as linguagens HTML e CSS na <span>Way Cursos</span>. Estou muito entusiasmado em aprender mais sobre programação e tecnologia, e espero poder utilizar essas habilidades no futuro para criar projetos incríveis e contribuir para a comunidade de desenvolvimento web. Pretendo constatemente continuar evoluindo e crescendo em quaisquer situações decorrentes, com a minha força de vontade e determinação sinto que consigo ir a lugares inimagináveis, sempre vai ser um prazer conhecer pessoas novas com novos conhecimentos assim sempre poderemos aprender coisas novas e evoluir mais ainda. Sinta-se à vontade para navegar em meu portfólio e conferir alguns dos projetos que já desenvolvi até o momento. Obrigado pela visita!</p>
     </main>
 
     <footer>
