--- a/hobbys.html
+++ b/hobbys.html
@@ -36,7 +36,7 @@
     
     <main>
         <p class="alinhamento">
-            Olá, vejo que esta interressado em conhecer um pouco mais sobre min, bem deixe-me lhe introduzir um pouco sobre o que faço nas horas vagas, geralmente o meu hobby mais comum e estar na comunidade de jogos, nos tempos atuais estou atuando como jogador profissional em crescimento aprendendo sobre um jogo conhecido como <span>Honor Of Kings</span>. E o Honor of Kings é um jogo de estrategia de 5 contra 5 com um objetivo de derrubar\destruir torres inimigas com o objetivo de chegar no nucleo da base inimiga e a destruir assim garantindo a vitória do jogo. Vai ser uma tragetoria complexa porem cheia de desafios e conquistas diferentes e com um cenario em constante crescimento e evolução. E é sempre um prazer cresçer.
+            Olá, vejo que esta interressado em conhecer um pouco mais sobre min, bem deixe-me lhe introduzir um pouco sobre o que faço nas horas vagas, geralmente o meu hobby mais comum é estar na comunidade de jogos, nos tempos atuais estou atuando como jogador profissional em crescimento aprendendo sobre um jogo conhecido como <span>Honor Of Kings</span>. O Honor of Kings é um jogo de estratégia de 5 contra 5 com um objetivo de derrubar\destruir torres inimigas com o intuito de chegar no núcleo da base inimiga e a destruir assim garantindo a vitória do jogo. Vai ser uma tragetoria complexa porem cheia de desafios e conquistas diferentes e com um cenário em constante crescimento e evolução. É sempre um prazer cresçer.
         </p> 
         <div id="honorofkings">
             <img src="images/honor-of-kings-logo.png" alt="Capa do Honor Of Kings" class="hok">
