--- a/hobbys.html
+++ b/hobbys.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breno Bento</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/" type="image/x-icon">
     <script src="script.js"></script>
 
 </head>
@@ -35,6 +35,7 @@
     </header>
     
     <main>
+        <h2>MysTDre</h2> <h4>Vulgo Breno Bento Fontenele</h4>
         <p class="alinhamento">
             Olá, vejo que esta interressado em conhecer um pouco mais sobre min, bem deixe-me lhe introduzir um pouco sobre o que faço nas horas vagas, geralmente o meu hobby mais comum é estar na comunidade de jogos, nos tempos atuais estou atuando como jogador profissional em crescimento aprendendo sobre um jogo conhecido como <span>Honor Of Kings</span>. O Honor of Kings é um jogo de estratégia de 5 contra 5 com um objetivo de derrubar\destruir torres inimigas com o intuito de chegar no núcleo da base inimiga e a destruir assim garantindo a vitória do jogo. Vai ser uma tragetoria complexa porem cheia de desafios e conquistas diferentes e com um cenário em constante crescimento e evolução. É sempre um prazer cresçer.
         </p> 
