--- a/hobbys.html
+++ b/hobbys.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breno Bento</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/" type="image/x-icon">
+    <link rel="shortcut icon" href="images/icon_e34d038b52e3553294ef317bb6240b26.ico" type="image/x-icon">
     <script src="script.js"></script>
 
 </head>
