--- a/hobbys.html
+++ b/hobbys.html
@@ -25,7 +25,7 @@
             <h1>Breno Bento Fontenele</h1>
             <p>Estudante</p>
         </div>
-        <img src="images/brenoperfil.jpg" alt="Breno Bento Fontenele" id="fotoperfil">
+        <img src="images/perfilbreno.png" alt="Breno Bento Fontenele" id="fotoperfil">
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">Início</a> | 
